internal/render/testdata/kmc/k8s/kmc/base/deployment.yaml
# Generated by deploybot. Do not edit.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kmc
  labels:
    app.kubernetes.io/managed-by: deploybot
    app.kubernetes.io/name: kmc
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: kmc
  template:
    metadata:
      labels:
        app.kubernetes.io/managed-by: deploybot
        app.kubernetes.io/name: kmc
    spec:
      serviceAccountName: kmc
      imagePullSecrets:
        - name: ghcr-auth
      containers:
        - name: web
          image: ghcr.io/ianunruh/kmc:main
          imagePullPolicy: IfNotPresent
          envFrom:
            - configMapRef:
                name: kmc-env
            - secretRef:
                name: kmc-env
          env:
            - name: KMC_CLUSTERS_CONFIG
              value: /app/config/clusters.yaml
          ports:
            - name: http
              containerPort: 3000
          volumeMounts:
            - name: clusters
              mountPath: /app/config
              readOnly: true
          startupProbe:
            httpGet:
              path: /login
              port: http
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 30
          livenessProbe:
            httpGet:
              path: /login
              port: http
            initialDelaySeconds: 10
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /login
              port: http
            periodSeconds: 10
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: "1"
              memory: 1Gi
      volumes:
        - name: clusters
          configMap:
            name: kmc-clusters
