internal/render/testdata/kmc/k8s/kmc/base/httproute.yaml
# Generated by deploybot. Do not edit.
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kmc
  labels:
    app.kubernetes.io/managed-by: deploybot
    app.kubernetes.io/name: kmc
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: envoy-gateway-system
      sectionName: https-public
  hostnames:
    - console.kcloud.zone
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      timeouts:
        request: 3600s
      backendRefs:
        - name: kmc
          port: 3000
