internal/render/testdata/kmc/k8s/kmc/base/service.yaml
# Generated by deploybot. Do not edit.
apiVersion: v1
kind: Service
metadata:
  name: kmc
  labels:
    app.kubernetes.io/managed-by: deploybot
    app.kubernetes.io/name: kmc
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 3000
